--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,8 +5,9 @@ cache:
  paths:
   - .m2/repository
 
-runtests:
+runtestsandprogram:
  image: maven:3.3.9-jdk-8
  script:
   - cd primes;
-    mvn test
+    mvn test;
+    mvn exec:java
