--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,3 +11,8 @@ runtestsandprogram:
   - cd primes;
     mvn test;
     mvn exec:java
+ artifacts:
+    name: "${CI_PROJECT_NAME}_${CI_COMMIT_REF_NAME}_${CI_JOB_ID}_pruefungen"
+    expire_in: 8 mos
+    paths:
+      - "*.txt"
